--- a/styleman.css
+++ b/styleman.css
@@ -1,4 +1,13 @@
-
+body {
+  background-image: url(images/pink\ purple.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  max-width: 100%;
+  height: 100%;
+  object-fit: contain;
+  position: relative;
+}
 .vl {
   border-left: 2px solid white;
   height: 25px;
@@ -92,4 +101,63 @@ input:hover {
   fill: #9e9ea7;
   width: 1rem;
   height: 1rem;
+}
+
+#name {
+  color:black;
+  margin-top: 220px;
+  font-size: 25px;
+  margin-left: 15%;
+  position: absolute;
+  font-family: inherit;
+}
+
+#man {
+  color:white;
+  margin-left: -41px;
+  position: absolute;
+  font-size: 50px;
+  font-family: inherit;
+  font-weight: 800;
+  margin-top: 15px;
+  
+}
+#destroy {
+  color:black;
+  margin-top: 290px;
+  font-size: 25px;
+  margin-left: 28%;
+  position: absolute;
+  font-family: inherit;
+  z-index: -1;
+}
+
+#create {
+  color:hsl(182, 100%, 50%);
+  margin-top: 25px;
+  font-size: 25px;
+  margin-left: -81px;
+  font-style:oblique;
+  position: absolute;
+  font-family: inherit;
+  z-index: -1;
+}
+
+@media only screen and (min-width: 720px) {
+  #fontfocus {
+    margin-top:-80px;
+    align-items: center;
+    position: relative;
+  }
+}
+
+@media only screen and (max-width: 1080px) {
+  #fontfocus {
+    margin-left: -20px;
+    margin-top: -40px;
+    position: relative;
+  }
+}
+#delele {
+   color:#e1e1e1;
 }
