--- a/styleman.css
+++ b/styleman.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(images/pink\ purple.png);
+  background-image: url(images/pink purple.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
