--- a/styleman.css
+++ b/styleman.css
@@ -32,7 +32,7 @@
 }
 
 body {
-  background-image: url(images/pink\ purple.png);
+  background-image: url(images/pink purple.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
